tdf#108005: Problems with progress bar while saving document

...as StatusIndicatorFactory::m_pWakeUp is still non-null after it has already
been used while loading the document.  Regression introduced with
017f250764ec7b4ecb82ac19f5b3f68cadf1bf56 "Ensure WakeUpThread is joined before
exit".

(Also, WakeUpThread::stop could take up to 25 msec longer than necessary, as it
failed to set condition_, so would always have waited for WakeUpThread::execute
to finish its next 25 msec condition_.wait call.)

Change-Id: Ic7fe15f1b90f3b8292cd2ceccdc2719a00743d44
Reviewed-on: https://gerrit.libreoffice.org/49718
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>
(cherry picked from commit 57574c2bcc60d37620288c403267c34d960f5863)
Reviewed-on: https://gerrit.libreoffice.org/49780
Reviewed-by: Michael Stahl <mstahl@redhat.com>